@@ -78,29 +78,47 @@ namespace libtorrent
 			return;
 		}
 		std::string parent = parent_path(fname);
+
 		if (parent.empty())
 		{
 			e.path_index = -1;
+			return;
+		}
+
+		if (parent.size() >= m_name.size()
+			&& parent.compare(0, m_name.size(), m_name) == 0
+			&& (parent.size() == m_name.size()
+#ifdef TORRENT_WINDOWS
+				|| parent[m_name.size()] == '\\'
+#endif
+				|| parent[m_name.size()] == '/'
+			))
+		{
+			parent.erase(parent.begin(), parent.begin() + m_name.size()
+				+ (m_name.size() == parent.size()?0:1));
+			e.no_root_dir = false;
 		}
 		else
 		{
-			// do we already have this path in the path list?
-			std::vector<std::string>::reverse_iterator p
-				= std::find(m_paths.rbegin(), m_paths.rend(), parent);
-
-			if (p == m_paths.rend())
-			{
-				// no, we don't. add it
-				e.path_index = m_paths.size();
-				m_paths.push_back(parent);
-			}
-			else
-			{
-				// yes we do. use it
-				e.path_index = p.base() - m_paths.begin() - 1;
-			}
-			e.set_name(filename(e.filename()).c_str());
+			e.no_root_dir = true;
 		}
+
+		// do we already have this path in the path list?
+		std::vector<std::string>::reverse_iterator p
+			= std::find(m_paths.rbegin(), m_paths.rend(), parent);
+
+		if (p == m_paths.rend())
+		{
+			// no, we don't. add it
+			e.path_index = m_paths.size();
+			m_paths.push_back(parent);
+		}
+		else
+		{
+			// yes we do. use it
+			e.path_index = p.base() - m_paths.begin() - 1;
+		}
+		e.set_name(filename(e.filename()).c_str());
 	}
 
 	file_entry::file_entry(): offset(0), size(0), file_base(0)
@@ -111,7 +129,10 @@ namespace libtorrent
 
 	file_entry::~file_entry() {}
 
-	internal_file_entry::~internal_file_entry() { if (name_len == name_is_owned) free((void*)name); }
+	internal_file_entry::~internal_file_entry()
+	{
+		if (name_len == name_is_owned) free((void*)name);
+	}
 
 	internal_file_entry::internal_file_entry(internal_file_entry const& fe)
 		: name(0)
@@ -123,6 +144,7 @@ namespace libtorrent
 		, hidden_attribute(fe.hidden_attribute)
 		, executable_attribute(fe.executable_attribute)
 		, symlink_attribute(fe.symlink_attribute)
+		, no_root_dir(fe.no_root_dir)
 		, path_index(fe.path_index)
 	{
 		set_name(fe.filename().c_str());
@@ -138,6 +160,7 @@ namespace libtorrent
 		hidden_attribute = fe.hidden_attribute;
 		executable_attribute = fe.executable_attribute;
 		symlink_attribute = fe.symlink_attribute;
+		no_root_dir = fe.no_root_dir;
 		set_name(fe.filename().c_str());
 		return *this;
 	}
@@ -332,7 +355,8 @@ namespace libtorrent
 		ret.hidden_attribute = ife.hidden_attribute;
 		ret.executable_attribute = ife.executable_attribute;
 		ret.symlink_attribute = ife.symlink_attribute;
-		if (ife.symlink_index != internal_file_entry::not_a_symlink) ret.symlink_path = symlink(index);
+		if (ife.symlink_index != internal_file_entry::not_a_symlink)
+			ret.symlink_path = symlink(index);
 		ret.filehash = hash(index);
 		return ret;
 	}
@@ -494,14 +518,7 @@ namespace libtorrent
 	{
 		TORRENT_ASSERT(index >= 0 && index < int(m_files.size()));
 		internal_file_entry const& fe = m_files[index];
-		TORRENT_ASSERT(fe.path_index >= -2 && fe.path_index < int(m_paths.size()));
-		// -2 means this is an absolute path filename
-		if (fe.path_index == -2) return fe.filename();
-
-		// -1 means no path
-		if (fe.path_index == -1) return combine_path(save_path, fe.filename());
-
-		return combine_path(save_path, combine_path(m_paths[fe.path_index], fe.filename()));
+		return file_path(fe, save_path);
 	}
 
 	std::string file_storage::file_name(int index) const
@@ -581,7 +598,8 @@ namespace libtorrent
 		return m_file_base[index];
 	}
 
-	std::string file_storage::file_path(internal_file_entry const& fe, std::string const& save_path) const
+	std::string file_storage::file_path(internal_file_entry const& fe
+		, std::string const& save_path) const
 	{
 		TORRENT_ASSERT(fe.path_index >= -2 && fe.path_index < int(m_paths.size()));
 		// -2 means this is an absolute path filename
@@ -590,7 +608,15 @@ namespace libtorrent
 		// -1 means no path
 		if (fe.path_index == -1) return combine_path(save_path, fe.filename());
 
-		return combine_path(save_path, combine_path(m_paths[fe.path_index], fe.filename()));
+		if (fe.no_root_dir)
+			return combine_path(save_path
+				, combine_path(m_paths[fe.path_index]
+				, fe.filename()));
+
+		return combine_path(save_path
+			, combine_path(m_name
+			, combine_path(m_paths[fe.path_index]
+			, fe.filename())));
 	}
 
 	std::string file_storage::file_name(internal_file_entry const& fe) const
